# pyqtconsole

./: .flake8  .gitignore  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  coroutine.py  inuithread.py  pyproject.toml  setup.cfg  setup.py  threaded.py
.github/workflows/: ci.yml  deploy.yml  test.yml
examples/: _gevent.py  _phome.py  _trollius.py  inuithread.py  threaded.py  threaded_styles.py
pyqtconsole/: __init__.py  autocomplete.py  commandhistory.py  console.py  highlighter.py  interpreter.py  prompt.py  stream.py  syntaxhighlighter.py  text.py
pyqtconsole/.svn/: all-wcprops  entries
pyqtconsole/extensions/: autocomplete.py  commandhistory.py  extension.py
pyqtconsole/qt/: QtCore.py  QtGui.py  QtNetwork.py  QtWidgets.py  __init__.py
src/pyqtconsole/: __init__.py  autocomplete.py  commandhistory.py  console.py  highlighter.py  interpreter.py  magic.py  prompt.py  stream.py  text.py
tests/: test_console.py  test_highlighter.py  test_text.py
