[build-system]
requires = ["setuptools >= 77.0.3"]
# ^ minimum required for the modern `project.license`
build-backend = "setuptools.build_meta"

[project]
name = "pyqtconsole"
dynamic = ["version", "readme"]
authors = [
    {name = "Marcus Oskarsson", email = "marcus.oscarsson@esrf.fr"}
]
description = "Light-weight python interpreter, easy to embed into Qt applications"
requires-python = ">=3.9,<4.0"
keywords = ["interactive", "interpreter", "console", "shell", "autocompletion", "jedi", "qt"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "qtpy",
    "jedi",
]

[project.optional-dependencies]
dev = ["flake8"]

[project.urls]
Homepage = "https://github.com/pyqtconsole/pyqtconsole"

[tool.setuptools]
packages = ["pyqtconsole"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pyqtconsole.__version__"}
readme = {file = ["README.rst", "CHANGES.rst"], content-type = "text/x-rst"}
