[build-system]
requires = ["setuptools >= 77.0.3"]
# ^ minimum required for the modern `project.license`
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Marcus Oskarsson", email = "marcus.oscarsson@esrf.fr"},
]
classifiers = [
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Interpreters",
  "Topic :: Software Development :: User Interfaces",
]
dependencies = [
  "qtpy",
  "jedi",
  "pygments",
  "ipython-pygments-lexers",
]
description = "Light-weight python interpreter, easy to embed into Qt applications"
dynamic = ["version", "readme"]
keywords = ["interactive", "interpreter", "console", "shell", "autocompletion", "jedi", "qt"]
license = "MIT"
license-files = ["LICENSE"]
name = "pyqtconsole"
requires-python = ">=3.9,<4.0"

[project.optional-dependencies]
dev = ["flake8"]

[project.urls]
Homepage = "https://github.com/pyqtconsole/pyqtconsole"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
packages = ["pyqtconsole"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"], content-type = "text/x-rst"}
version = {attr = "pyqtconsole.__version__"}
