[metadata]
name             = pyqtconsole
version          = attr: pyqtconsole.__version__
description      = Light weight python interpreter, easy to embed into Qt applications
author           = Marcus Oskarsson
author_email     = marcus.oscarsson@esrf.fr
url              = https://github.com/marcus-oscarsson/pyqtconsole
license          = MIT
licens_file      = LICENSE
keywords         = interactive interpreter console shell autocompletion jedi qt
long_description = file: README.rst
classifiers      =
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: User Interfaces
long_description_content_type = text/x-rst

[options]
packages = pyqtconsole, pyqtconsole.qt
python_requires = >=2.7
zip_safe = true
include_package_data = true

[options.extras_require]
autocomplete = jedi

[bdist_wheel]
universal = true

[flake8]
exclude = pyqtconsole/qt,.git,build,__pycache__,dist,.eggs
